--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,8 +27,7 @@
     "src/**/*.vue",
     "build/**/*.ts",
     "build/**/*.d.ts",
-    "vite.config.ts",
-    "config/configEnv.ts"
+    "vite.config.ts"
   ],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
