--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -1,3 +1,4 @@
+// 自动生成的，node服务器上的ts转译配置，貌似没什么用
 {
   "compilerOptions": {
     "composite": true,
@@ -6,5 +7,5 @@
     "moduleResolution": "bundler",
     "allowSyntheticDefaultImports": true
   },
-  "include": ["vite.config.ts"]
+  "include": ["vite.config.ts","build/**/*.ts"]
 }
