--- a/.env.development
+++ b/.env.development
@@ -18,4 +18,4 @@ VITE_PWA = false
 VITE_API_URL = /api
 
 # 开发环境跨域代理，支持配置多个
-# VITE_PROXY = [["/api","https://mock.mengxuegu.com/mock/629d727e6163854a32e8307e"]]
+VITE_PROXY = [["/api","https://ythpt.test.yfzt.wdtszkj.com/rlzy/api"]]
