--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@vitejs/plugin-vue": "^4.2.3",
     "@vitejs/plugin-vue-jsx": "^3.0.2",
     "rollup-plugin-visualizer": "^5.9.2",
+    "sass": "^1.69.4",
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
     "vite-plugin-compression": "^0.5.1",
