--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "vite --open",
-    "build": "vue-tsc && vite build",
-    "preview": "vite preview"
+    "build": "vue-tsc --noEmit --skipLibCheck && vite build",
+    "preview": "vite preview",
+    "type:check": "vue-tsc --noEmit --skipLibCheck"
   },
   "dependencies": {
     "axios": "^1.5.1",
@@ -17,12 +18,15 @@
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.6",
     "@types/node": "^20.8.4",
     "@vitejs/plugin-legacy": "^4.1.1",
     "@vitejs/plugin-vue": "^4.2.3",
     "@vitejs/plugin-vue-jsx": "^3.0.2",
+    "jest": "^29.7.0",
     "rollup-plugin-visualizer": "^5.9.2",
     "sass": "^1.69.4",
+    "ts-jest": "^29.1.1",
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
     "vite-plugin-compression": "^0.5.1",
