--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "vite --open",
-    "build": "vue-tsc && vite build",
-    "build:dev": "vue-tsc --noEmit --skipLibCheck && vite build --mode development",
+    "build": "vue-tsc --noEmit --skipLibCheck && vite build",
     "build:test": "vue-tsc && vite build --mode test",
     "build:prod": "vue-tsc --noEmit --skipLibCheck && vite build --mode production",
     "preview": "vite preview",
