--- a/package.json
+++ b/package.json
@@ -20,19 +20,29 @@
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
+    "@types/crypto-js": "^4.1.3",
     "@types/jest": "^29.5.6",
     "@types/node": "^20.8.4",
     "@types/nprogress": "^0.2.2",
+    "@typescript-eslint/eslint-plugin": "^6.9.0",
+    "@typescript-eslint/parser": "^6.9.0",
     "@vitejs/plugin-legacy": "^4.1.1",
     "@vitejs/plugin-vue": "^4.2.3",
     "@vitejs/plugin-vue-jsx": "^3.0.2",
+    "eslint": "^8.52.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-define-config": "^1.24.1",
+    "eslint-plugin-prettier": "^5.0.1",
+    "eslint-plugin-vue": "^9.18.1",
     "jest": "^29.7.0",
+    "prettier": "^3.0.3",
     "rollup-plugin-visualizer": "^5.9.2",
     "sass": "^1.69.4",
     "ts-jest": "^29.1.1",
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
     "vite-plugin-compression": "^0.5.1",
+    "vite-plugin-eslint": "^1.8.1",
     "vite-plugin-html": "^3.2.0",
     "vite-plugin-mkcert": "^1.16.0",
     "vite-plugin-optimize-persist": "^0.1.2",
