--- a/.env.development
+++ b/.env.development
@@ -18,4 +18,4 @@ VITE_PWA = false
 VITE_API_URL = /api
 
 # 开发环境跨域代理，支持配置多个
-VITE_PROXY = [["/api","https://zdx.com/rlzy/api"]]
+VITE_PROXY = [["/api","http://localhost:9090"]]
