解决了请求失败的问题，代理路径 和 baseUrl要分清除

--- a/.env.development
+++ b/.env.development
@@ -1,8 +1,8 @@
 # 本地环境
 VITE_USER_NODE_ENV = development
 
-# 公共基础路径
-VITE_PUBLIC_PATH = /
+# 公共基础路径   公共基础路径和开发环境接口地址 是两回事
+VITE_PUBLIC_PATH = '/'
 
 # 路由模式
 # Optional: hash | history
