--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "type:check": "vue-tsc --noEmit --skipLibCheck"
   },
   "dependencies": {
+    "ant-design-vue": "^4.0.0-rc.6",
     "axios": "^1.5.1",
     "crypto-js": "^4.1.1",
     "nprogress": "^0.2.0",
@@ -51,5 +52,8 @@
     "vite-plugin-theme": "^0.8.6",
     "vite-plugin-vue-setup-extend": "^0.4.0",
     "vue-tsc": "^1.8.5"
+  },
+  "engines": {
+    "node": ">=18"
   }
 }
