--- a/.env.development
+++ b/.env.development
@@ -15,7 +15,7 @@ VITE_DROP_CONSOLE = true
 VITE_PWA = false
 
 # 开发环境接口地址
-VITE_API_URL = /api
+VITE_API_URL = /api2
 
 # 开发环境跨域代理，支持配置多个
-VITE_PROXY = [["/api","http://localhost:9090"]]
+VITE_PROXY = [["/api","http://localhost:9090"],["/api2","http://10.200.216.26:3002/"]]
