--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "nprogress": "^0.2.0",
     "pinia": "^2.1.6",
     "pinia-plugin-persistedstate": "^3.2.0",
+    "spark-md5": "^3.0.2",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5"
   },
@@ -25,6 +26,7 @@
     "@types/jest": "^29.5.6",
     "@types/node": "^20.8.10",
     "@types/nprogress": "^0.2.2",
+    "@types/spark-md5": "^3.0.4",
     "@typescript-eslint/eslint-plugin": "^6.9.0",
     "@typescript-eslint/parser": "^6.9.0",
     "@vitejs/plugin-legacy": "^4.1.1",
