--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     "type:check": "vue-tsc --noEmit --skipLibCheck"
   },
   "dependencies": {
-    "@ant-design/icons-vue": "^7.0.1",
-    "ant-design-vue": "4.x",
+    "@element-plus/icons-vue": "^2.3.1",
     "axios": "^1.5.1",
     "crypto-js": "^4.1.1",
+    "element-plus": "^2.4.4",
     "nprogress": "^0.2.0",
     "pinia": "^2.1.6",
     "pinia-plugin-persistedstate": "^3.2.0",
