--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.5.1",
     "crypto-js": "^4.1.1",
     "element-plus": "^2.4.4",
+    "lodash-es": "^4.17.21",
     "nprogress": "^0.2.0",
     "pinia": "^2.1.6",
     "pinia-plugin-persistedstate": "^3.2.0",
@@ -25,6 +26,7 @@
   "devDependencies": {
     "@types/crypto-js": "^4.1.3",
     "@types/jest": "^29.5.6",
+    "@types/lodash-es": "^4.17.12",
     "@types/node": "^20.8.10",
     "@types/nprogress": "^0.2.2",
     "@types/spark-md5": "^3.0.4",
