--- a/package.json
+++ b/package.json
@@ -8,6 +8,11 @@
     "build:test": "vue-tsc && vite build --mode test",
     "build:prod": "vue-tsc --noEmit --skipLibCheck && vite build --mode production",
     "preview": "vite preview",
+    "lint:eslint": "eslint --fix --ext .js,.ts,.vue ./src",
+    "lint:prettier": "prettier --write \"src/**/*.{js,ts,json,tsx,css,less,scss,vue,html,md}\"",
+    "lint:stylelint": "stylelint --cache --fix \"**/*.{vue,less,postcss,css,scss}\" --cache --cache-location node_modules/.cache/stylelint/",
+    "lint:lint-staged": "lint-staged",
+    "prepare": "husky install",
     "type:check": "vue-tsc --noEmit --skipLibCheck"
   },
   "dependencies": {
@@ -40,7 +45,9 @@
     "eslint-define-config": "^1.24.1",
     "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-vue": "^9.18.1",
+    "husky": "8.0.3",
     "jest": "^29.7.0",
+    "lint-staged": "14.0.1",
     "prettier": "^3.0.3",
     "rollup-plugin-visualizer": "^5.9.2",
     "sass": "^1.69.4",
