--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
+    "@commitlint/cli": "^19.3.0",
+    "@commitlint/config-conventional": "^19.2.2",
     "@types/crypto-js": "^4.1.3",
     "@types/jest": "^29.5.6",
     "@types/lodash-es": "^4.17.12",
@@ -40,6 +42,7 @@
     "@vitejs/plugin-legacy": "^4.1.1",
     "@vitejs/plugin-vue": "^4.2.3",
     "@vitejs/plugin-vue-jsx": "^3.0.2",
+    "commitlint": "^19.3.0",
     "eslint": "^8.52.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-define-config": "^1.24.1",
