--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "crypto-js": "^4.1.1",
     "element-plus": "^2.4.4",
     "lodash-es": "^4.17.21",
+    "md5": "^2.3.0",
     "nprogress": "^0.2.0",
     "pinia": "^2.1.6",
     "pinia-plugin-persistedstate": "^3.2.0",
@@ -34,6 +35,7 @@
     "@types/crypto-js": "^4.1.3",
     "@types/jest": "^29.5.6",
     "@types/lodash-es": "^4.17.12",
+    "@types/md5": "^2.3.5",
     "@types/node": "^20.8.10",
     "@types/nprogress": "^0.2.2",
     "@types/spark-md5": "^3.0.4",
