wip: 动态路由，mock引入

--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "husky": "8.0.3",
     "jest": "^29.7.0",
     "lint-staged": "14.0.1",
+    "mockjs": "^1.1.0",
     "prettier": "^3.0.3",
     "rollup-plugin-visualizer": "^5.9.2",
     "sass": "^1.69.4",
